--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,16 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 jiter==0.11.0
 openai==2.0.0
+packaging==25.0
+pluggy==1.6.0
 psycopg2-binary==2.9.10
 pydantic==2.11.9
 pydantic_core==2.33.2
+Pygments==2.19.2
+pytest==8.4.2
 python-dotenv==1.1.1
 python-telegram-bot==22.5
 requests==2.32.5
