--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ pytest==8.4.2
 python-dotenv==1.1.1
 python-telegram-bot==22.5
 requests==2.32.5
+setuptools==80.9.0
 sniffio==1.3.1
 tqdm==4.67.1
 typing-inspection==0.4.2
