--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ dependencies = [
     , "openai>=2.0.0"
     , "python-telegram-bot>=22.5"
     , "psycopg2-binary>=2.9.10"
-    ,
+    , "langchain>=0.3.0"
+    , "langchain-openai>=0.3.0"
+    , "langchain-community>=0.3.0"
 ]
 
 [project.optional-dependencies]
