--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,62 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.0
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.11.0
+attrs==25.4.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
+-e git+ssh://git@github.com/Caelest1s/chatbot_ia_assistent.git@12bddb836891391ffc884e5bfcd21b8c2e5659a8#egg=chatbot_ia_assistent
+dataclasses-json==0.6.7
 distro==1.9.0
+frozenlist==1.8.0
+greenlet==3.2.4
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
+httpx-sse==0.4.3
 idna==3.10
 iniconfig==2.1.0
 jiter==0.11.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.3.27
+langchain-community==0.3.31
+langchain-core==0.3.79
+langchain-openai==0.3.35
+langchain-text-splitters==0.3.11
+langsmith==0.4.37
+marshmallow==3.26.1
+multidict==6.7.0
+mypy_extensions==1.1.0
+numpy==2.3.4
 openai==2.0.0
+orjson==3.11.3
 packaging==25.0
 pluggy==1.6.0
+propcache==0.4.1
 psycopg2-binary==2.9.10
 pydantic==2.11.9
+pydantic-settings==2.11.0
 pydantic_core==2.33.2
 Pygments==2.19.2
 pytest==8.4.2
+pytest-asyncio==1.2.0
 python-dotenv==1.1.1
 python-telegram-bot==22.5
+PyYAML==6.0.3
+regex==2025.9.18
 requests==2.32.5
+requests-toolbelt==1.0.0
 setuptools==80.9.0
 sniffio==1.3.1
+SQLAlchemy==2.0.44
+tenacity==9.1.2
+tiktoken==0.12.0
 tqdm==4.67.1
+typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
+yarl==1.22.0
+zstandard==0.25.0
