--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,11 +25,12 @@ test = [
 dev = []
 
 [tool.setuptools]
-packages = ["src.bot", "src.utils", "src.config"]
+packages = ["src.bot", "src.utils", "src.config", "src.services", "src.schemas", "src.models"]
 
 [tool.setuptools.package-dir]
 "src.bot" = "src/bot"
 "src.utils" = "src/utils"
 "src.config" = "src/config"
+"src.services" =  "src/services"
 "src.schemas" = "src/schemas"
 "src.models" = "src/models"
