--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
+# requirements.txt
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.0
 aiosignal==1.4.0
+annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
+asyncpg==0.30.0
 attrs==25.4.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
--e git+ssh://git@github.com/Caelest1s/chatbot_ia_assistent.git@12bddb836891391ffc884e5bfcd21b8c2e5659a8#egg=chatbot_ia_assistent
+click==8.3.0
+colorlog==6.10.1
 dataclasses-json==0.6.7
 distro==1.9.0
+e==1.4.5
+fastapi==0.121.1
 frozenlist==1.8.0
 greenlet==3.2.4
 h11==0.16.0
@@ -51,6 +57,7 @@ requests-toolbelt==1.0.0
 setuptools==80.9.0
 sniffio==1.3.1
 SQLAlchemy==2.0.44
+starlette==0.49.3
 tenacity==9.1.2
 tiktoken==0.12.0
 tqdm==4.67.1
@@ -58,5 +65,6 @@ typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
+uvicorn==0.38.0
 yarl==1.22.0
 zstandard==0.25.0
