--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-# requirements.txt
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.0
 aiosignal==1.4.0
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
+APScheduler==3.11.1
 asyncpg==0.30.0
 attrs==25.4.0
 certifi==2025.8.3
@@ -12,6 +12,7 @@ charset-normalizer==3.4.3
 click==8.3.0
 colorlog==6.10.1
 dataclasses-json==0.6.7
+dateparser==1.2.2
 distro==1.9.0
 e==1.4.5
 fastapi==0.121.1
@@ -48,13 +49,16 @@ pydantic_core==2.33.2
 Pygments==2.19.2
 pytest==8.4.2
 pytest-asyncio==1.2.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-telegram-bot==22.5
+pytz==2025.2
 PyYAML==6.0.3
 regex==2025.9.18
 requests==2.32.5
 requests-toolbelt==1.0.0
 setuptools==80.9.0
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.44
 starlette==0.49.3
@@ -64,6 +68,7 @@ tqdm==4.67.1
 typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
+tzlocal==5.3.1
 urllib3==2.5.0
 uvicorn==0.38.0
 yarl==1.22.0
